# cannibal_scan

./: .gitignore  README.md  sample.csv
docs/Sessões/: Sessão 2.md  Sessão 3.md
docs/superpowers/Spec/: um-amigo-meu-me-playful-kazoo.md
docs/superpowers/plans/: 2026-06-15-slice1-parsing.md
wasm-core/: Cargo.toml
wasm-core/src/: compare.rs  lib.rs  overlaps.rs  parser.rs  types.rs
wasm-core/tests/: compare_test.rs  overlaps_test.rs  parser_test.rs  wasm_test.rs
web/: .env.example  package-lock.json  package.json  vitest.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/api/audit/: route.ts
web/src/app/api/compare-audit/: route.ts
web/src/app/api/crawl/: route.ts
web/src/app/compare/: page.tsx
web/src/components/: SiteSourcePanel.tsx
web/src/lib/: types.ts  wasm.ts
web/src/lib/audit/: cluster.test.ts  cluster.ts  prompt.test.ts  prompt.ts  run-audit.test.ts  run-audit.ts  schema.test.ts  schema.ts
web/src/lib/compare/: metrics.test.ts  metrics.ts  prompt.ts  run-compare-audit.test.ts  run-compare-audit.ts  schema.ts
web/src/lib/crawl/: crawler.ts  csv.test.ts  csv.ts  url.test.ts  url.ts  useSiteSource.ts
web/src/mastra/agents/: audit-agent.ts
