[package]
name = "cannibalscan-wasm-core"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib = alvo WASM; rlib = permite que os testes nativos usem a lib
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
csv = "1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
