[package]
name = "cannibalscan-wasm-core"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib = alvo WASM; rlib = permite que os testes nativos usem a lib
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
csv = "1.3"

# wasm-bindgen-test is ONLY needed for the wasm32 smoke tests (run via `wasm-pack
# test --node` in Task 6). Scoping it to the wasm32 target keeps it out of the
# native `cargo test` build, which on the windows-gnu toolchain would otherwise
# pull in `windows-sys` and fail (incomplete bundled mingw: dlltool can't spawn).
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
